--- a/.babelrc
+++ b/.babelrc
@@ -21,7 +21,9 @@
           "@hook": "./src/hooks",
           "@router": "./src/routers",
           "@page": "./src/pages",
-          "@constant": "./src/constants"
+          "@layout": "./src/layouts",
+          "@constant": "./src/constants",
+          "@interface": "./src/interfaces"
         }
       }
     ]
