--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,7 +48,7 @@
     }
   },
   "include": [
-    "src/**/*", "public/**/*", "config/**/*", "@types/*"
+    "src/**/*", "public/**/*", "config/**/*", "@types/*", "webpack.*.js"
   ],
   "exclude": [
     "node_modules"
