--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,15 @@
-webpack.config.js
 .babelrc
 .eslintrc.js
-.tsconfig.json
+tsconfig.json
 server.js
+node_modules/
+test/
+.next/
+.vscode/
+public/
+server.js
+.github/
+next.config.js
+stores/
+jest.config.js
+jest.setup.js
