--- a/package.json
+++ b/package.json
@@ -1,91 +1,73 @@
 {
-  "name": "portfolio-front",
-  "version": "0.0.1",
-  "main": "index.js",
-  "repository": "git@github.com:Haneum-Park/portfolio-front.git",
+  "name": "dayoff-front",
+  "version": "0.1.0",
+  "description": "day-off.xyz site base front project",
+  "repository": "git@github.com:DayOffxyz/dayoff-front.git",
   "author": "Haneum-Park <qkrgksdma17@gmail.com>",
-  "license": "UNLICENSED",
+  "license": "DayOffxyz",
   "private": true,
   "scripts": {
-    "prerender": "react-snap",
-    "dev": "NODE_ENV=development webpack serve --open --config webpack.dev.js",
-    "prod": "NODE_ENV=production webpack serve --config webpack.prod.js",
-    "build": "NODE_ENV=production webpack build --config webpack.prod.js && yarn prerender",
-    "lint": "eslint './src/**/*.{ts,tsx}'",
-    "lint:fix": "eslint --fix './src/**/*.{ts,tsx}'",
-    "deploy-patch": "clear;printf \"\n\n\n\";npm version patch --no-git-tag-version;printf \"\n\n\n 푸시하시고, 머지요청하셔야 패치됩니다.\n\n\n\n\n\n\n\n\n\n\n\n\n\";printf \"https://github.com/Haneum-Park/portfolio-front/compare\n\n\";git add package.json && git commit && git push",
-    "deploy-minor": "clear;printf \"\n\n\n\";npm version minor --no-git-tag-version;printf \"\n\n\n 푸시하시고, 머지요청하셔야 패치됩니다.\n\n\n\n\n\n\n\n\n\n\n\n\n\";printf \"https://github.com/Haneum-Park/portfolio-front/compare\n\n\";git add package.json && git commit && git push",
-    "deploy-major": "clear;printf \"\n\n\n\";npm version major --no-git-tag-version;printf \"\n\n\n 푸시하시고, 머지요청하셔야 패치됩니다.\n\n\n\n\n\n\n\n\n\n\n\n\n\";printf \"https://github.com/Haneum-Park/portfolio-front/compare\n\n\";git add package.json && git commit && git push",
-    "server": "node ./server.js"
+    "dev": "NODE_ENV=development node server.js",
+    "build": "NODE_ENV=production next build",
+    "start": "NODE_ENV=production next start",
+    "export": "next export",
+    "lint": "next lint",
+    "eslint": "eslint \"./**/*.{ts,tsx}\"",
+    "eslint:fix": "eslint --fix \"./**/*.{ts,tsx}\"",
+    "test": "jest --watch --passWithNoTests",
+    "test:ci": "jest --ci --passWithNoTests",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "deploy-patch": "clear;printf \"\n\n\n\";npm version patch --no-git-tag-version;printf \"\n\n\n 푸시하시고, 머지요청하셔야 패치됩니다.\n\n\n\n\n\n\n\n\n\n\n\n\n\";printf \"https://github.com/DayOffxyz/dayoff-front/compare\n\n\";git add package.json && git commit && git push",
+    "deploy-minor": "clear;printf \"\n\n\n\";npm version minor --no-git-tag-version;printf \"\n\n\n 푸시하시고, 머지요청하셔야 패치됩니다.\n\n\n\n\n\n\n\n\n\n\n\n\n\";printf \"https://github.com/DayOffxyz/dayoff-front/compare\n\n\";git add package.json && git commit && git push",
+    "deploy-major": "clear;printf \"\n\n\n\";npm version major --no-git-tag-version;printf \"\n\n\n 푸시하시고, 머지요청하셔야 패치됩니다.\n\n\n\n\n\n\n\n\n\n\n\n\n\";printf \"https://github.com/DayOffxyz/dayoff-front/compare\n\n\";git add package.json && git commit && git push"
   },
   "dependencies": {
-    "@mdi/js": "^6.5.95",
-    "@mdi/react": "^1.5.0",
-    "@reduxjs/toolkit": "^1.8.0",
-    "axios": "^0.26.0",
-    "express": "^4.17.3",
-    "gatsby-plugin-react-helmet": "^5.9.0",
-    "public-ip": "^5.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet-async": "^1.2.3",
-    "react-icons": "^4.3.1",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.2",
-    "styled-components": "^5.3.3"
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
+    "@types/styled-components": "^5.1.26",
+    "axios": "^0.27.2",
+    "dayjs": "^1.11.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "i18n-js": "^4.1.1",
+    "next": "^13.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "sass": "^1.54.9",
+    "styled-components": "^5.3.5",
+    "swr": "^1.3.0",
+    "valtio": "^1.7.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.13",
-    "@types/react-redux": "^7.1.23",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.24",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
-    "@webpack-cli/serve": "1.5.2",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^10.2.4",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.10.0",
+    "@storybook/addon-controls": "^6.5.12",
+    "@storybook/addon-essentials": "^6.5.12",
+    "@storybook/addon-links": "^6.5.12",
+    "@storybook/react": "^6.5.12",
+    "@testing-library/dom": "^8.19.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "eslint": "^8.23.1",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-import-resolver-webpack": "^0.13.2",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.3",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^7.2.1",
-    "html-loader": "^3.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.6.0",
-    "node-sass": "^7.0.1",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "react-snap": "^1.23.0",
-    "sass-loader": "^12.6.0",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.2.7",
-    "typescript": "^4.6.2",
-    "url-loader": "^4.1.1",
-    "webpack": "5.64.3",
-    "webpack-cli": "4.9.1",
-    "webpack-dev-server": "4.5.0",
-    "webpack-merge": "^5.8.0"
-  },
-  "reactSnap": {
-    "source": "dist",
-    "minifyHtml": {
-      "collapseWhitespace": false,
-      "removeComments": true,
-      "inlineCss": true
-    }
+    "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-storybook": "^0.6.6",
+    "jest": "^29.2.1",
+    "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^29.2.1",
+    "node-mocks-http": "^1.11.0",
+    "prettier": "^2.7.1",
+    "react-docgen-typescript-loader": "^3.7.2",
+    "storybook-addon-styled-component-theme": "^2.0.0",
+    "ts-jest": "^29.0.3",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.8.3"
   }
 }
