--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
       "@page/*": ["./pages/*"],
       "@image/*": ["./public/images/*"],
       "@atom/*": ["./components/atoms/*"],
+      "@block/*": ["./components/blocks/*"],
       "@molecule/*": ["./components/molecules/*"],
       "@organism/*": ["./components/organisms/*"],
       "@template/*": ["./components/templates/*"],
