--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "i18n-js": "^4.1.1",
+    "i18next": "^22.4.10",
     "next": "^13.0.2",
+    "next-i18next": "^13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.0",
     "react-icons": "^4.4.0",
     "sass": "^1.54.9",
     "styled-components": "^5.3.5",
