[ FIX ] : Darkmode login fixed

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "util-api-front",
+  "name": "dayoff-portfolio-front",
   "version": "0.1.0",
-  "description": "util-api.com site base front project",
+  "description": "Day-off.xyz site portfolio front project",
   "repository": "git@github.com:Haneum-Park/portfolio-front.git",
   "author": "Haneum-Park <qkrgksdma17@gmail.com>",
-  "license": "UTIL API PORTFOLIO",
+  "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "dev": "NODE_ENV=development node server.js",
+    "dev": "PORT=8080 NODE_ENV=development next dev",
     "build": "NODE_ENV=production next build",
     "start": "NODE_ENV=production next start",
     "export": "next export",
@@ -30,7 +30,6 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.1",
     "i18n-js": "^4.1.1",
     "i18next": "^22.4.10",
     "next": "^13.0.2",
