[ FEAT ] : 다국어 지원 리팩토링 완료

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
       "@hook/*": ["./hooks/*"],
       "@store/*": ["./stores/*"],
       "@util/*": ["./utils/*"],
-      "@const/*": ["./consts/*"]
+      "@const/*": ["./consts/*"],
+      "@lib/*": ["./lib/*"]
     },
     "noEmit": true,
     "isolatedModules": true,
