--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": true,
   "scripts": {
     "dev": "PORT=8080 NODE_ENV=development next dev",
-    "prod": "NODE_ENV=production next start",
+    "start": "NODE_ENV=production next start",
     "build": "NODE_ENV=production next build",
     "export": "next export",
     "lint": "next lint",
@@ -33,13 +33,13 @@
     "i18next": "^22.4.10",
     "next": "^13.0.2",
     "next-i18next": "^13.1.5",
+    "next-language-detector": "^1.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
     "sass": "^1.54.9",
     "styled-components": "^5.3.5",
-    "swr": "^1.3.0",
     "valtio": "^1.7.0"
   },
   "devDependencies": {
