--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "dev": "PORT=8080 NODE_ENV=development next dev",
+    "dev": "PORT=8080 NODE_ENV=development next dev --turbo",
     "start": "NODE_ENV=production next start",
     "build": "NODE_ENV=production next build",
     "export": "next export",
@@ -22,45 +22,49 @@
     "deploy-major": "clear;printf \"\n\n\n\";npm version major --no-git-tag-version;printf \"\n\n\n 푸시하시고, 머지요청하셔야 패치됩니다.\n\n\n\n\n\n\n\n\n\n\n\n\n\";printf \"https://github.com/Haneum-Park/portfolio-front/compare\n\n\";git add package.json && git commit && git push"
   },
   "dependencies": {
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
-    "@types/styled-components": "^5.1.26",
-    "axios": "^0.27.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/themes": "^3.2.1",
+    "@types/node": "22.13.14",
+    "@types/react": "19.0.12",
+    "@types/react-dom": "19.0.4",
+    "axios": "1.8.4",
     "dayjs": "^1.11.5",
     "dotenv": "^16.0.3",
     "i18n-js": "^4.1.1",
     "i18next": "^22.4.10",
-    "next": "^13.0.2",
-    "next-i18next": "^13.1.5",
+    "jotai": "2.12.2",
+    "next": "15.2.4",
+    "next-i18next": "15.4.2",
     "next-language-detector": "^1.0.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-i18next": "^12.2.0",
-    "react-icons": "^4.8.0",
+    "radix-ui": "^1.1.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-i18next": "15.4.1",
+    "react-query": "^3.39.2",
     "sass": "^1.54.9",
-    "styled-components": "^5.3.5",
-    "valtio": "^1.7.0"
+    "storybook": "8.6.11"
   },
   "devDependencies": {
     "@playwright/test": "^1.31.2",
-    "@storybook/addon-controls": "^6.5.12",
-    "@storybook/addon-essentials": "^6.5.12",
-    "@storybook/addon-links": "^6.5.12",
-    "@storybook/react": "^6.5.12",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
-    "eslint": "^8.23.1",
+    "@storybook/addon-controls": "8.6.11",
+    "@storybook/addon-essentials": "8.6.11",
+    "@storybook/addon-links": "8.6.11",
+    "@storybook/react": "8.6.11",
+    "@typescript-eslint/eslint-plugin": "8.28.0",
+    "@typescript-eslint/parser": "8.28.0",
+    "eslint": "9.23.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-next": "12.3.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-storybook": "^0.6.6",
-    "node-mocks-http": "^1.11.0",
+    "eslint-config-next": "^15.2.4",
+    "eslint-config-prettier": "10.1.1",
+    "eslint-plugin-prettier": "^5.2.5",
+    "eslint-plugin-storybook": "^0.12.0",
+    "node-mocks-http": "1.16.2",
     "prettier": "^2.7.1",
     "react-docgen-typescript-loader": "^3.7.2",
-    "storybook-addon-styled-component-theme": "^2.0.0",
     "ts-loader": "^9.4.1",
-    "typescript": "^4.8.3"
+    "typescript": "5.8.2"
   }
 }
