--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jotai": "2.12.2",
     "next": "15.2.2",
     "next-intl": "^4.0.0",
+    "next-themes": "^0.4.6",
     "radix-ui": "^1.1.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
